styles/tables.less
.content table.infobox {
    font-size: 100%;
}

table.infobox caption {
    text-align: center;
    font-weight: bold;
}

.app_table_container {
    width: 100%;
    margin-top: 14px;
    margin-bottom: 14px;
    border-radius: 2px;
    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.12), 0 0 1px 0 rgba(0,0,0,0.18);
}

.app_table_collapsed_container {
    width: 100%;
    padding-left: 12px;
    padding-right: 48px;
    padding-top: 12px;
    padding-bottom: 12px;
    line-height: 120%;
    background-color: #f8f8f8;
    background-repeat: no-repeat;
    background-position: 95% 50%;
    background-size: 16px 16px;
}

.app_table_collapsed_open {
    border-radius: 2px;
    /* @embed */
    background-image: url( '../images/table_expand.png' );
}

.app_table_collapse_close {
    border-radius: 2px 2px 0px 0px;
}

.app_table_collapse_icon {
    /* @embed */
    background-image: url( '../images/table_collapse.png' );
}

.app_span_collapse_text {
    color: #808080;
}

.app_table_collapsed_bottom {
    width: 100%;
    color: #808080;
    padding-left: 12px;
    padding-right: 48px;
    padding-top: 12px;
    padding-bottom: 12px;
    line-height: 120%;
    border-radius: 0px 0px 2px 2px;
    background-color: #f8f8f8;
    background-repeat: no-repeat;
    background-position: 95% 50%;
    background-size: 16px 16px;
}

